@@ -1,3 +1,8 @@
+2003-04-01  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSApplication.m: ensure that application initialisation
+	is performed in the main thread.
+
 2003-03-31  Adam Fedor  <fedor@gnu.org>
 
 	* Source/NSWindow.m (-becomeKeyWindow): Set initialFirstResponder.
